<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".FormActivity">

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_name" />

    <EditText
        android:id="@+id/ed_age"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_age" />

    <EditText
        android:id="@+id/ed_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_gender" />
    <Button
        android:id="@+id/btn_save"
        android:text="@string/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>