<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_age"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_gender"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_edit" />

</LinearLayout>